refactoristion de collapse et correction bug d'affichage de texte sur banner

--- a/src/components/collapse/Collapse.css
+++ b/src/components/collapse/Collapse.css
@@ -1,116 +1,134 @@
-.collapse{
+.collapse {
     margin-top: 30px;
-   
+
 }
-.collapse-title{
+
+.collapse-title {
     background: #FF6060;
     border-radius: 10px;
-    height: 52px; 
+    height: 52px;
     width: 100%;
     position: relative;
     display: flex;
     align-items: center;
-   
+
 }
 
-.collapse-title h3{
+.collapse-title h3 {
     font-weight: 500;
     font-size: 18px;
-    color:  #ffffff;
+    color: #ffffff;
     margin-left: 18px;
 }
-.collapse-content{
+
+.collapse-content {
     background: #F7F7F7;
-border-radius: 0px 0px 0px 10px;
-
-width: 100%;
-overflow: auto;
-overflow-y: scroll;
-
-
-padding: 40px 20px;
-
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+    /* overflow: auto;
+overflow-y: scroll; */
+    margin-top: -5px;
+    padding: 40px 20px;
+    margin-bottom: 20px;
 }
-.collapse-content li{
+
+.collapse-content li {
     font-weight: 400;
     font-size: 18px;
     font-family: 'Montserrat';
-font-style: normal;
-list-style-type: none;
- 
-    
-    
-    
+    font-style: normal;
+    list-style-type: none;
+
+
+
+
     color: #FF6060;
     margin-bottom: 10px;
 
 }
-.collapse-anim-in{
 
-transform-origin: top;
-    animation: collapseAnimIn 0.4s ease-in-out; 
+.collapse-anim-in {
+
+    transform-origin: top;
+    animation: collapseAnimIn 0.4s ease-in-out;
 }
-.collapse-anim-out{
+
+.collapse-anim-out {
     transform-origin: bottom;
-    animation: collapseAnimIn 0.4s both; 
+    animation: collapseAnimIn 0.4s both;
 }
+
 @keyframes collapseAnimIn {
-from{
+    from {
         transform: scaleY(0);
     }
-    to{
+
+    to {
         transform: scaleY(1);
 
-    
-}}
+
+    }
+}
+
 @keyframes collapseAnimOut {
-from{
+    from {
         transform: scaleY(1);
     }
-    to{
+
+    to {
         transform: scaleY(0);
 
-    
-}}
-.collapse-content p{
+
+    }
+}
+
+.collapse-content p {
     font-weight: 400;
     font-size: 18px;
 
-color: #FF6060;
+    color: #FF6060;
 }
-.arrows-collapse{
-position: absolute;
-top: 50%;
-right: 0%;
-transform: translate(-50%, -50%);
-cursor: pointer;
+
+.arrows-collapse {
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
 }
+
 @media screen and (max-width: 950px) {
- .collapse{
-    margin-top: 20px;
- }
- .collapse-title{
-    height: 30px;
- }
- .collapse-title h3{
-    font-weight: 500;
-    font-size: 13px;
-   
-    margin-left: 12px;
-}
-.arrows-collapse{
-    width: 16px;
+    .collapse {
+        margin-top: 20px;
     }
-    .collapse-content p{
-     font-size: 12px;
+
+    .collapse-title {
+        height: 30px;
     }
+
+    .collapse-title h3 {
+        font-weight: 500;
+        font-size: 13px;
+
+        margin-left: 12px;
+    }
+
+    .arrows-collapse {
+        width: 16px;
+    }
+
+    .collapse-content p {
+        font-size: 12px;
+    }
+
     .collapse-content {
-     padding: 20px 30px;
+        padding: 20px 30px;
     }
-    .collapse-content li{
+
+    .collapse-content li {
         font-weight: 400;
         font-size: 12px;
         margin-bottom: 5px;
 
-    }    
-                }
+    }
+}
